client/src/styles/calendar-card.css
.calendar-card {
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
    padding: 1rem;
    transition: 1s;
  }
  
  .calendar-card img {
    width: 200px;
    height:200px;
    border: solid 1px var(--main_text_color);
    border-right: 0;
    object-fit: cover;
    display: flex;
    align-items: center;
    justify-content: center;

  }

  .calendar-card h3 {
    font-size: 25px;
    font-family: system-ui, -apple-system, BlinkMacSystemFont;
    font-weight: 600;
    color: var(--main_text_color);
    text-decoration: none;
    margin: 0.5rem;
    padding: 0;
  }
  
  .calendar-card h4 {
    color: lightgray;
    font-size: 10px;
    font-weight: 200;
    padding-top: 3rem;
    font-size: 18px;
    margin: 0;
    padding: 0;
  }
  .calendar-card p {
    color: var(--main_text_color);
    font-weight: 200;
    font-size: 18px;
    margin: 0;
    padding: 0;
  }
  .calendar-card ul{
    color: var(--main_text_color);
    text-align: left;
    list-style: square;
    height: 100%;
    width: 100;
     font-family: system-ui, -apple-system, BlinkMacSystemFont;
  }

  .calendar-card li {

  }
  
  .calendar-card:hover {
    cursor: pointer;
    transform: scale(1.05);
  }
  
  .calendar-card-label {
    background-color: rgb(0, 0, 0);
    border: solid 1px var(--main_text_color);
    border-left: 0;
    width: 200px;
    height: 200px; 
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    overflow: auto;
  }


@media screen and (max-width: 680px) {
  .calendar-card {
/* hur lösa responsivitet? */
  }
}

